2007-07-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Track api changes.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Added
	  null checks.
	* MonoDevelop.SourceEditor.Properties,
	  MonoDevelop.SourceEditor.InsightWindow,
	  MonoDevelop.SourceEditor.InsightWindow/MethodInsightDataProvider.cs,
	  MonoDevelop.SourceEditor.InsightWindow/InsightWindow.cs,
	  MonoDevelop.SourceEditor.InsightWindow/IInsightDataProvider.cs,
	  MonoDevelop.SourceEditor.InsightWindow/IndexerInsightDataProvider.cs,
	  MonoDevelop.SourceEditor.Document: Removed unused files and
	  directories.

2007-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Use the
	  MarkSet event to update the method browser. Fixes bug #81864.

2007-07-07  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	Make sure files are reverted also when created. Fixes bug #81911.

2007-07-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Changed
	  source a bit due to core refactorings.

2007-07-03  Mike Krüger <mkrueger@novell.com> 

	* EditorBindings.glade,
	  MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui.OptionPanels/CodeTemplatePanel.cs,
	  MonoDevelop.SourceEditor.addin.xml, MonoDevelop.SourceEditor.mdp:
	  Removed the code template options (now they're part of the Ide
	  project).

2007-07-02 Fabian Sturm <f@rtfs.org>

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Added separate spaces, tabs and newline highlighting.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Same.
	* MonoDevelop.SourceEditor.Gui.OptionPanels/MarkersTextEditorPanel.cs: Same.

2007-07-01  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* EditorBindings.glade: Fixed capitalization issue.

2007-06-11  Lluis Sanchez Gual <lluis@novell.com> 
